tests/analyzer/errors/native_struct_lit.ray
fn main() {
    let data = DataNoInit{ }
}

